--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,8 @@ h2{
             padding: 5px 2% 5px 2%;
         }
         .img_article {
-            width: 97%;
+            box-sizing: border-box;
+            width: 100%;
             height: 125px;
             border-radius: 20px 20px 0px 0px;
             border: solid 4px white;
